--- a/src/netcomp/GUI/VtnPrincipal.form
+++ b/src/netcomp/GUI/VtnPrincipal.form
@@ -186,6 +186,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mainBotonBuscarClaseActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
