--- a/src/netcomp/GUI/VtnClaseMaestro.form
+++ b/src/netcomp/GUI/VtnClaseMaestro.form
@@ -133,8 +133,8 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="564" max="32767" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="133" max="-2" attributes="0"/>
+              <EmptySpace pref="560" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="137" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -159,14 +159,8 @@
       <SubComponents>
         <Component class="javax.swing.JList" name="jList1">
           <Properties>
-            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="Alumno1"/>
-                <StringItem index="1" value="Alumno2"/>
-                <StringItem index="2" value="Alumno3"/>
-                <StringItem index="3" value="..."/>
-                <StringItem index="4" value="AlumnoN"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="listModel = new CustomListModel()" type="code"/>
             </Property>
           </Properties>
         </Component>
