Conexiones con 2 hilos y mensajes XML
Implementación de todos los mensajes a través de XML, separados en los paquetes MensajesClase y MensajesAlumno.

En esta implementación los alumnos se conectan y desconectan de las clases, mostrando su nombre y apellido en la lista, y se borran al desconectarse, cerrando los sockets pertinentes limpiamente y eliminando las conexiones y alumnos de las listas.

TODO: 

Enviar lista de alumnos a todos los alumnos cuando se conecta o se desconecta algún alumno
Vincular envío de mensajes a eventos en el GUI.
Implementar envío de archivos.
Implementar envío de pantalla.

--- a/src/netcomp/GUI/VtnBuscarClase.form
+++ b/src/netcomp/GUI/VtnBuscarClase.form
@@ -79,7 +79,7 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="buscarClasesTabla">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="buscarClasesTabla.getModel().addTableModelListener(modeloDatos);">
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="buscarClasesTabla.getModel().addTableModelListener(modeloDatos);&#xa;buscarClasesTabla.addMouseListener(new MouseAdapter() {&#xa;   public void mouseClicked(MouseEvent e) {&#xa;      if (e.getClickCount() == 2) {&#xa;         JTable target = (JTable)e.getSource();&#xa;         int row = target.getSelectedRow();&#xa;         crearVentana(row);&#xa;         }&#xa;   }&#xa;});">
               <Connection code="modeloDatos" type="code"/>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
