--- a/src/netcomp/GUI/VtnClaseAlumno.form
+++ b/src/netcomp/GUI/VtnClaseAlumno.form
@@ -148,14 +148,8 @@
       <SubComponents>
         <Component class="javax.swing.JList" name="jList1">
           <Properties>
-            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="Alumno1"/>
-                <StringItem index="1" value="Alumno2"/>
-                <StringItem index="2" value="Alumno3"/>
-                <StringItem index="3" value="..."/>
-                <StringItem index="4" value="AlumnoN"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="listModel = new CustomListModelAlumno()" type="code"/>
             </Property>
           </Properties>
         </Component>
