--- a/src/netcomp/GUI/VtnClaseMaestro.form
+++ b/src/netcomp/GUI/VtnClaseMaestro.form
@@ -133,7 +133,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="560" max="32767" attributes="0"/>
+              <EmptySpace pref="575" max="32767" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="137" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -160,7 +160,7 @@
         <Component class="javax.swing.JList" name="jList1">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="listModel = new CustomListModel()" type="code"/>
+              <Connection code="listModel = new CustomListModelMaestro()" type="code"/>
             </Property>
           </Properties>
         </Component>
