--- a/src/netcomp/GUI/VtnClaseMaestro.form
+++ b/src/netcomp/GUI/VtnClaseMaestro.form
@@ -67,7 +67,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
               <Properties>
                 <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="new AccionCrearVtnArchivosMaestro(clase)" type="code"/>
+                  <Connection code="new AccionCrearVtnArchivosMaestro(clase,this)" type="code"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Compartir Archivos"/>
               </Properties>
